--- a/index.html
+++ b/index.html
@@ -1654,40 +1654,36 @@
             <div class="links animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.5s" style="animation-delay: 0.5s; opacity: 1;">
                 <!-- <h5 class="title animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.5s" style="animation-delay: 0.5s; opacity: 1; font-size: 18.4px;">Company</h5> -->
                 <h5 class="title">
-                    <a style="color: white;" data-toggle="collapse" class="js-collapse-trigger custom-accordion-trigger flex items-center justify-between" href="#footer-nav-1" role="button" aria-expanded="true" aria-controls="footer-nav-1">
+                    <a style="color: white;" data-toggle="collapse" class="footer-nav-header js-collapse-trigger custom-accordion-trigger flex items-center justify-between" href="#footer-nav-1" role="button" aria-expanded="true" aria-controls="footer-nav-1">
                       Company
                       <span class="custom-accordion-arrow transform transition-all -rotate-90 duration-200 linear lg:hidden ml-4 text-gray-100"><img src="./theme-assets/images/icon-arrow-right-white.svg"></span>
                     </a>
                   </h5>
                   <div class="js-collapse custom-accordion" id="footer-nav-1">
                     <ul class="useful-links float-left mr-5">
-                        <li ><a class="hover:text-white" href="" target="_blank">Team</a></li>
-                        <li  ><a class="hover:text-white" href="index.html#about" target="_blank">About Us</a></li>
-                        <li ><a class="hover:text-white" href="index.html#roadmap" target="_blank">Roadmap</a></li>
+                        <li ><a class="hover:text-white footer-nav-main" href="" target="_blank">Team</a></li>
+                        <li  ><a class="hover:text-white footer-nav-main" href="index.html#about" target="_blank">About Us</a></li>
+                        <li ><a class="hover:text-white footer-nav-main" href="index.html#roadmap" target="_blank">Roadmap</a></li>
                     </ul>
                 </div>
 
-                <!-- <ul class="useful-links float-left mr-5">
-                    <li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="animation-delay: 0.6s; opacity: 1;"><a href="" target="_blank">Team</a></li>
-                    <li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.7s" style="animation-delay: 0.7s; opacity: 1;"><a href="index.html#about" target="_blank">About Us</a></li>
-                    <li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.8s" style="animation-delay: 0.8s; opacity: 1;"><a href="index.html#roadmap" target="_blank">Roadmap</a></li>
-                </ul> -->
+        
         </div>
         </div>
         <div class="col-md-2">
             <div class="links">
                 <h5 class="title animated fadeInUpShorter">
-                    <a style="color: white;"  data-toggle="collapse" class="js-collapse-trigger custom-accordion-trigger flex items-center justify-between" href="#footer-nav-2" role="button" aria-expanded="true" aria-controls="footer-nav-2">
+                    <a style="color: white;"  data-toggle="collapse" class="footer-nav-header js-collapse-trigger custom-accordion-trigger flex items-center justify-between" href="#footer-nav-2" role="button" aria-expanded="true" aria-controls="footer-nav-2">
                     Features
                       <span class="custom-accordion-arrow transform transition-all -rotate-90 duration-200 linear lg:hidden ml-4 text-gray-100"><img src="./theme-assets/images/icon-arrow-right-white.svg"></span>
                     </a>
                   </h5>
                   <div class="js-collapse custom-accordion" id="footer-nav-2">
                       <ul class="useful-links float-left mr-5">
-                        <li style="width: max-content; animation-delay: 0.9s; opacity: 1;" class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.9s"><a href="Private-messenger.html" target="_blank">Private Messenger</a></li>
-                        <li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.9s" style="animation-delay: 0.9s; opacity: 1;"><a href="Secure-Crypto-Wallet.html">Crypto Wallet</a></li>
-                        <li style="line-height: 25px; animation-delay: 0.8s; opacity: 1;" class="animated" data-animation-delay="0.8s"><a href="DVPN.html">DVPN</a></li>
-                        <li style="line-height: 25px; animation-delay: 0.8s; opacity: 1;" class="animated" data-animation-delay="0.8s"><a href="Web3-Browser.html">Web3 Browser</a></li>
+                        <li style="width: max-content; animation-delay: 0.9s; opacity: 1;" class="footer-nav-main animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.9s"><a href="Private-messenger.html" target="_blank">Private Messenger</a></li>
+                        <li class="footer-nav-main animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.9s" style="animation-delay: 0.9s; opacity: 1;"><a href="Secure-Crypto-Wallet.html">Crypto Wallet</a></li>
+                        <li style="line-height: 25px; animation-delay: 0.8s; opacity: 1;" class="animated footer-nav-main" data-animation-delay="0.8s"><a href="DVPN.html">DVPN</a></li>
+                        <li style="line-height: 25px; animation-delay: 0.8s; opacity: 1;" class="animated footer-nav-main" data-animation-delay="0.8s"><a href="Web3-Browser.html">Web3 Browser</a></li>
                       </ul>
                   </div>
         </div>
@@ -1697,17 +1693,17 @@
         <div class="col-md-2">
             <div class="links">
                 <h5 class="title animated fadeInUpShorter">
-                    <a style="color: white;"  data-toggle="collapse" class="js-collapse-trigger custom-accordion-trigger flex items-center justify-between" href="#footer-nav-3" role="button" aria-expanded="true" aria-controls="footer-nav-3">
+                    <a style="color: white;"  data-toggle="collapse" class="footer-nav-header js-collapse-trigger custom-accordion-trigger flex items-center justify-between" href="#footer-nav-3" role="button" aria-expanded="true" aria-controls="footer-nav-3">
                       Documentation
                       <span class="custom-accordion-arrow transform transition-all -rotate-90 duration-200 linear lg:hidden ml-4 text-gray-100"><img src="./theme-assets/images/icon-arrow-right-white.svg"></span>
                     </a>
                   </h5>
                   <div class="js-collapse custom-accordion" id="footer-nav-3">
                       <ul class="useful-links float-left mr-5">
-                        <li class="animated" data-animation-delay="0.6s" style="animation-delay: 0.6s; opacity: 1;"><a href="files\whitepaper.pdf" target="_blank">Whitepaper</a></li>
-                        <li class="animated" data-animation-delay="0.7s" style="animation-delay: 0.7s; opacity: 1;"><a href="privacy-policy.html" target="_blank">Privacy Policy</a></li>
-                        <li class="animated" data-animation-delay="0.8s" style="animation-delay: 0.8s; opacity: 1;"><a href="terms-of-use.html">Terms of use</a></li>
-                        <li class="animated" data-animation-delay="0.8s" style="animation-delay: 0.8s; opacity: 1;"><a href="faq.html" target="_blank">FAQ's</a></li>
+                        <li class="footer-nav-main animated" data-animation-delay="0.6s" style="animation-delay: 0.6s; opacity: 1;"><a href="files\whitepaper.pdf" target="_blank">Whitepaper</a></li>
+                        <li class="footer-nav-main animated" data-animation-delay="0.7s" style="animation-delay: 0.7s; opacity: 1;"><a href="privacy-policy.html" target="_blank">Privacy Policy</a></li>
+                        <li class="footer-nav-main animated" data-animation-delay="0.8s" style="animation-delay: 0.8s; opacity: 1;"><a href="terms-of-use.html">Terms of use</a></li>
+                        <li class="footer-nav-main animated" data-animation-delay="0.8s" style="animation-delay: 0.8s; opacity: 1;"><a href="faq.html" target="_blank">FAQ's</a></li>
                       </ul>
                   </div>
         </div>
@@ -1717,7 +1713,7 @@
             <div class="links">
                 <h5 class="title animated fadeInUpShorter">
                     <div style="width: max-content;" class="lg:flex lg:items-center">
-                        <a style="color: white; "  data-toggle="collapse" class="js-collapse-trigger custom-accordion-trigger flex items-center justify-between" href="#footer-nav-4" role="button" aria-expanded="true" aria-controls="footer-nav-4">
+                        <a style="color: white; "  data-toggle="collapse" class="footer-nav-header js-collapse-trigger custom-accordion-trigger flex items-center justify-between" href="#footer-nav-4" role="button" aria-expanded="true" aria-controls="footer-nav-4">
                             PCNP Network
                             <span class="custom-accordion-arrow transform transition-all -rotate-90 duration-200 linear lg:hidden ml-4 text-gray-100"><img src="./theme-assets/images/icon-arrow-right-white.svg"></span>
                         </a>
@@ -1726,10 +1722,10 @@
                   </h5>
                   <div class="js-collapse custom-accordion" id="footer-nav-4">
                       <ul class="useful-links float-left mr-5">
-                        <li class="animated" data-animation-delay="0.6s" style="animation-delay: 0.6s; opacity: 1;"><a href="keygard.html" target="_blank">KeyPass</a></li>
-                        <li style="width: max-content; animation-delay: 0.7s; opacity: 1;" class="animated" data-animation-delay="0.7s"><a href="Account-Generation.html" target="_blank">Account Generation</a></li>
-                        <li class="animated" data-animation-delay="0.8s" style="animation-delay: 0.8s; opacity: 1;"><a href="index.html#token-sale-mobile-app">Token Sale</a></li>
-                        <li class="animated" data-animation-delay="0.8s" style="animation-delay: 0.8s; opacity: 1;"><a href="security.html" target="_blank">Security</a></li>
+                        <li class="footer-nav-main animated" data-animation-delay="0.6s" style="animation-delay: 0.6s; opacity: 1;"><a href="keygard.html" target="_blank">KeyPass</a></li>
+                        <li style="width: max-content; animation-delay: 0.7s; opacity: 1;" class="footer-nav-main animated" data-animation-delay="0.7s"><a href="Account-Generation.html" target="_blank">Account Generation</a></li>
+                        <li class="footer-nav-main animated" data-animation-delay="0.8s" style="animation-delay: 0.8s; opacity: 1;"><a href="index.html#token-sale-mobile-app">Token Sale</a></li>
+                        <li class="footer-nav-main animated" data-animation-delay="0.8s" style="animation-delay: 0.8s; opacity: 1;"><a href="security.html" target="_blank">Security</a></li>
                       </ul>
                   </div>
         </div>
