--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
              </section>
             <!--/ Our Coin -->
             <!-- Whitepaper -->
-            <section id="whitepaper" class="whitepaper section-padding">
+            <!-- <section id="whitepaper" class="whitepaper section-padding">
             <div class="container">
                 <div class="heading text-center">
                     <h6 class="sub-title">Documents</h6>
@@ -601,7 +601,7 @@
                     </div>
                 </div>
             </div>
-             </section>
+             </section> -->
             <!--/ Whitepaper -->
             <!-- Pre-Sale & Mobile Apps -->
             <section id="token-sale-mobile-app" class="token-sale-mobile-app section-padding ">
