--- a/es/index.html
+++ b/es/index.html
@@ -86,9 +86,9 @@
                   <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
                     <a class="nav-link" href="security.html">Seguridad</a>
                 </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                  <!-- <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
                       <a class="nav-link" href="index.html#token-distribution">Distribución de tokens</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
                       <a class="nav-link" href="index.html#token-sale-mobile-app">venta de tokens</a>
                   </li>
@@ -105,12 +105,15 @@
                           <a class="dropdown-item" href="jobs.html">Trabajos</a>
                       </div>
                   </li>
-                  <li class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
-                      <a class="dropdown-toggle" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-us"></span> EN</a>
+                  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                    <a class="dropdown-toggle   border border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Es</a>
                       <div class="dropdown-menu" aria-labelledby="language">
-                          <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-de"></span> GN</a>
-                          <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-es"></span> SP</a>
-                          <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-mq"></span> FR</a>
+                          <a class="dropdown-item" href="../index.html"> English </a>
+                          <a class="dropdown-item" href="../ger/index.html"> Deutsch</a>
+                          <a class="dropdown-item" href="../fr/index.html"> Français</a>
+                          <a class="dropdown-item" href="../ru/index.html"> Русский</a>
+                          <a class="dropdown-item" href="../it/index.html"> Italiano</a>
+                          <a class="dropdown-item" href="../pd/index.html"> Polski</a>
                       </div>
                   </li>
               </ul>
