--- a/fr/Secure-Crypto-Wallet.html
+++ b/fr/Secure-Crypto-Wallet.html
@@ -130,15 +130,17 @@
 						  <a class="dropdown-item" href="jobs.html">Jobs</a>
 					  </div>
 				  </li>
-				  <li class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
-					  <a class="dropdown-toggle" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-us"></span> EN</a>
-					  <div class="dropdown-menu" aria-labelledby="language">
-						  <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-de"></span> GN</a>
-						  <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-es"></span> SP</a>
-						  <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-mq"></span> FR</a>
-					  </div>
-				  </li>
-			  </ul>
+				  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                    <a class="dropdown-toggle   border border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Fr</a>
+                      <div class="dropdown-menu" aria-labelledby="language">
+                          <a class="dropdown-item" href="../Secure-Crypto-Wallet.html"> English </a>
+                          <a class="dropdown-item" href="../es/Secure-Crypto-Wallet.html"> Español</a>
+                          <a class="dropdown-item" href="../ger/Secure-Crypto-Wallet.html"> Deutsch</a>
+                          <a class="dropdown-item" href="../ru/Secure-Crypto-Wallet.html"> Русский</a>
+                          <a class="dropdown-item" href="../it/Secure-Crypto-Wallet.html"> Italiano</a>
+                          <a class="dropdown-item" href="../pd/Secure-Crypto-Wallet.html"> Polski</a>
+                      </div>
+                  </li>
 			  <span id="slide-line"></span>
 			  <form class="form-inline mt-2 mt-md-0">
 				  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 animated" data-animation="fadeInDown" data-animation-delay="1.8s" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Sign in</a>
