--- a/fr/index.html
+++ b/fr/index.html
@@ -113,6 +113,18 @@
                           <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-mq"></span> FR</a>
                       </div>
                   </li>
+
+                  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                    <a class="dropdown-toggle   border border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Fr</a>
+                      <div class="dropdown-menu" aria-labelledby="language">
+                          <a class="dropdown-item" href="../index.html"> English </a>
+                          <a class="dropdown-item" href="../es/index.html"> Español</a>
+                          <a class="dropdown-item" href="../ger/index.html"> Deutsch</a>
+                          <a class="dropdown-item" href="../ru/index.html"> Русский</a>
+                          <a class="dropdown-item" href="../it/index.html"> Italiano</a>
+                          <a class="dropdown-item" href="../pd/index.html"> Polski</a>
+                      </div>
+                  </li>
               </ul>
               <span id="slide-line"></span>
               <form class="form-inline mt-2 mt-md-0">
