--- a/ger/security.html
+++ b/ger/security.html
@@ -345,16 +345,17 @@
 			</div>
 	
 	
-			<div class="col-md-2">
-				<div class="links">
-					<h5 style="font-size: 18.4px;"  class="title animated"  data-animation-delay="0.5s">Documantation</h5>
-					<ul class="useful-links float-left mr-5">
-						<li class="animated"  data-animation-delay="0.6s"><a href="files\whitepaper.pdf" target="_blank">Whitepaper</a></li>
-						<li class="animated"  data-animation-delay="0.7s"><a href="privacy-policy.html" target="_blank">Privacy Policy</a></li>
-						<li class="animated"  data-animation-delay="0.8s"><a href="terms-of-use.html">Terms of use</a></li>
-						<li class="animated"  data-animation-delay="0.8s"><a href="faq.html" target="_blank">FAQ's</a></li>
-					   
-					</ul>
+			<li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+				<a class="dropdown-toggle   border border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> De</a>
+				  <div class="dropdown-menu" aria-labelledby="language">
+					  <a class="dropdown-item" href="../security.html"> English </a>
+					  <a class="dropdown-item" href="../es/security.html"> Español</a>
+					  <a class="dropdown-item" href="../fr/security.html">  Français</a>
+					  <a class="dropdown-item" href="../ru/security.html"> Русский</a>
+					  <a class="dropdown-item" href="../it/security.html"> Italiano</a>
+					  <a class="dropdown-item" href="../pd/security.html"> Polski</a>
+				  </div>
+			  </li>
 			</div>
 			</div>
 	
