--- a/it/Web3-Browser.html
+++ b/it/Web3-Browser.html
@@ -129,14 +129,17 @@
 						  <a class="dropdown-item" href="jobs.html">Jobs</a>
 					  </div>
 				  </li>
-				  <li class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
-					  <a class="dropdown-toggle" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-us"></span> EN</a>
-					  <div class="dropdown-menu" aria-labelledby="language">
-						  <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-de"></span> GN</a>
-						  <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-es"></span> SP</a>
-						  <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-mq"></span> FR</a>
-					  </div>
-				  </li>
+				  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                    <a class="dropdown-toggle   border border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> It</a>
+                      <div class="dropdown-menu" aria-labelledby="language">
+                          <a class="dropdown-item" href="../Web3-Browser.html"> English </a>
+                          <a class="dropdown-item" href="../es/Web3-Browser.html"> Español</a>
+                          <a class="dropdown-item" href="../ger/Web3-Browser.html"> Deutsch</a>
+                          <a class="dropdown-item" href="../fr/Web3-Browser.html">  Français</a>
+                          <a class="dropdown-item" href="../ru/Web3-Browser.html"> Русский</a>
+                          <a class="dropdown-item" href="../pd/Web3-Browser.html"> Polski</a>
+                      </div>
+                  </li>
 			  </ul>
 			  <span id="slide-line"></span>
 			  <form class="form-inline mt-2 mt-md-0">
