--- a/it/Web3-Browser.html
+++ b/it/Web3-Browser.html
@@ -84,73 +84,75 @@
 
     <!-- Header Start-->
 	<header class="page-header">
-		<!-- Horizontal Menu Start-->
-		<nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-	  <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="index.html"><img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 160px; height: 70px;" src="../theme-assets/images/pcnp1112 - Copy.png" alt="Pcnprotocol Logo"/></a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-		  <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarCollapse">
-		  <div style="font-size: inherit;" id="navigation" class="navbar-nav ml-auto">
-			  <ul style="font-size: 15.008px;" class="navbar-nav mt-1">
-				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
-					  <a style="font-size: 12.8px;" class="nav-link" href="index.html#about">About</a>
-				  </li>
-				  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
-					  <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Features</a>
-					  <div class="dropdown-menu" aria-labelledby="more">
-						  <a class="dropdown-item" href="Private-Messenger.html">Private Messenger</a>
-						  <a class="dropdown-item" href="Account-Generation.html">Account Generation</a>
-						  <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Secure Crypto Wallet</a>
-						  <a class="dropdown-item" href="keygard.html">KeyPass</a>
-						  <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
-						  <a class="dropdown-item" href="DVPN.html">DVPN</a>
-					  </div>
-				  </li>
-				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
-                    <a class="nav-link" href="security.html">Security</a>
-                </li>
-				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
-					  <a class="nav-link" href="index.html#whitepaper">Whitepaper</a>
-				  </li>
-				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
-					  <a class="nav-link" href="index.html#token-sale-mobile-app">Token Sale</a>
-				  </li>
-				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.5s">
-					  <a class="nav-link" href="index.html#roadmap">Roadmap</a>
-				  </li>
-				  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
-					  <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
-					  <div class="dropdown-menu" aria-labelledby="more">
-						  <a class="dropdown-item" href="index.html#mobile-app">App</a>
-						  <a class="dropdown-item" href="index.html#team">Team</a>
-						  <a class="dropdown-item" href="index.html#faq">FAQ</a>
-						  <a class="dropdown-item" href="index.html#contact">Contact</a>
-						  <a class="dropdown-item" href="jobs.html">Jobs</a>
-					  </div>
-				  </li>
-				  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
-                    <a class="dropdown-toggle   border border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> It</a>
-                      <div class="dropdown-menu" aria-labelledby="language">
-                          <a class="dropdown-item" href="../Web3-Browser.html"> English </a>
-                          <a class="dropdown-item" href="../es/Web3-Browser.html"> Español</a>
-                          <a class="dropdown-item" href="../ger/Web3-Browser.html"> Deutsch</a>
-                          <a class="dropdown-item" href="../fr/Web3-Browser.html">  Français</a>
-                          <a class="dropdown-item" href="../ru/Web3-Browser.html"> Русский</a>
-                          <a class="dropdown-item" href="../pd/Web3-Browser.html"> Polski</a>
+        <!-- Horizontal Menu Start-->
+        <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
+      <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="#head-area"><img style="width: 160px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+          <div id="navigation" class="navbar-nav ml-auto">
+              <ul class="navbar-nav mt-1">
+                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
+                      <a class="nav-link" href="index.html#about">Missione</a>
+                  </li>
+                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                      <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Caratteristiche</a>
+                      <div class="dropdown-menu" aria-labelledby="more">
+                          <a class="dropdown-item" href="Private-Messenger.html">Messaggero privato</a>
+                          <a class="dropdown-item" href="Account-Generation.html">Generazione di account</a>
+                          <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Portafoglio sicuro di criptovalute</a>
+                          <a class="dropdown-item" href="keygard.html">KeyPass</a>
+                          <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
+                          <a class="dropdown-item" href="DVPN.html">DVPN</a>
                       </div>
                   </li>
-			  </ul>
-			  <span id="slide-line"></span>
-			  <form class="form-inline mt-2 mt-md-0">
-				  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 animated" data-animation="fadeInDown" data-animation-delay="1.8s" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Sign in</a>
-			  </form>
-		  </div>
-	  </div>
+                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                    <a class="nav-link" href="security.html">Sicurezza</a>
+                </li>
+                  <!-- <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                      <a class="nav-link" href="index.html#token-distribution">Distribuzione dei gettoni</a>
+                  </li> -->
+                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
+                      <a class="nav-link" href="index.html#token-sale-mobile-app">Vendita di token</a>
+                  </li>
+                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.5s">
+                      <a class="nav-link" href="index.html#roadmap">Tabella di marcia</a>
+                  </li>
+                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                      <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">più</a>
+                      <div class="dropdown-menu" aria-labelledby="more">
+                          <a class="dropdown-item" href="index.html#mobile-app">App</a>
+                          <a class="dropdown-item" href="index.html#team">Squadra</a>
+                          <a class="dropdown-item" href="faq.html">FAQ</a>
+                          <a class="dropdown-item" href="index.html#contact">Contatta</a>
+                          <a class="dropdown-item" href="jobs.html">Lavori</a>
+                      </div>
+                  </li>
+                  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                    <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> It</a>
+                      <div class="dropdown-menu" aria-labelledby="language">
+                          <a class="dropdown-item text-primary-base" href="../index.html"> English </a>
+                          <a class="dropdown-item text-primary-base" href="../es/index.html"> Español</a>
+                          <a class="dropdown-item text-primary-base" href="../ger/index.html"> Deutsch</a>
+                          <a class="dropdown-item text-primary-base" href="../fr/index.html">  Français</a>
+                          <a class="dropdown-item text-primary-base" href="../ru/index.html"> Русский</a>
+                          <a class="dropdown-item text-primary-base" href="../pd/index.html"> Polski</a>
+                      </div>
+                  </li>
+
+                 
+              </ul>
+              <span id="slide-line"></span>
+              <form class="form-inline mt-2 mt-md-0">
+                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 animated" data-animation="fadeInDown" data-animation-delay="1.8s" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Accedi</a>
+              </form>
+          </div>
+      </div>
   </div>
-		</nav>
-		<!-- /Horizontal Menu End-->
-	  </header>
+        </nav>
+        <!-- /Horizontal Menu End-->
+      </header>
 
       <!-- //////////////////////////////////// CONTAINER ////////////////////////////////////-->
    
