--- a/es/Web3-Browser.html
+++ b/es/Web3-Browser.html
@@ -131,14 +131,14 @@
 				  </li>
 				  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
                     <a class="dropdown-toggle   border border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Es</a>
-                      <div class="dropdown-menu" aria-labelledby="language">
-                          <a class="dropdown-item" href="../Web3-Browser.html"> English </a>
-                          <a class="dropdown-item" href="../ger/Web3-Browser.html"> Deutsch</a>
-                          <a class="dropdown-item" href="../fr/Web3-Browser.html"> Français</a>
-                          <a class="dropdown-item" href="../ru/Web3-Browser.html"> Русский</a>
-                          <a class="dropdown-item" href="../it/Web3-Browser.html"> Italiano</a>
-                          <a class="dropdown-item" href="../pd/Web3-Browser.html"> Polski</a>
-                      </div>
+					<div class="dropdown-menu" aria-labelledby="language">
+						<a class="dropdown-item  text-primary-base" href="../Web3-Browser.html"> English </a>
+						<a class="dropdown-item  text-primary-base" href="../ger/Web3-Browser.html"> Deutsch</a>
+						<a class="dropdown-item  text-primary-base" href="../fr/Web3-Browser.html"> Français</a>
+						<a class="dropdown-item  text-primary-base" href="../ru/Web3-Browser.html"> Русский</a>
+						<a class="dropdown-item  text-primary-base" href="../it/Web3-Browser.html"> Italiano</a>
+						<a class="dropdown-item  text-primary-base" href="../pd/Web3-Browser.html"> Polski</a>
+					</div>
                   </li>
 			  </ul>
 			  <span id="slide-line"></span>
