--- a/fr/Account-Generation.html
+++ b/fr/Account-Generation.html
@@ -107,6 +107,8 @@
                           <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
                           <a class="dropdown-item" href="DVPN.html">DVPN</a>
                       </div>
+
+					  
                   </li>
                   <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
                     <a class="nav-link" href="security.html">Sécurité</a>
@@ -134,14 +136,16 @@
 
                   <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
                     <a class="dropdown-toggle rounded  border border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Fr</a>
-                      <div class="dropdown-menu" aria-labelledby="language">
-                          <a class="dropdown-item  text-primary-base" href="../index.html"> English </a>
-                          <a class="dropdown-item  text-primary-base" href="../es/index.html"> Español</a>
-                          <a class="dropdown-item  text-primary-base" href="../ger/index.html"> Deutsch</a>
-                          <a class="dropdown-item  text-primary-base" href="../ru/index.html"> Русский</a>
-                          <a class="dropdown-item  text-primary-base" href="../it/index.html"> Italiano</a>
-                          <a class="dropdown-item  text-primary-base" href="../pd/index.html"> Polski</a>
-                      </div>
+					<div class="dropdown-menu" aria-labelledby="language">
+						<a class="dropdown-item  text-primary-base" href="../Account-Generation.html"> English </a>
+						<a class="dropdown-item  text-primary-base" href="../es/Account-Generation.html">  Español</a>
+						<a class="dropdown-item  text-primary-base" href="../ger/Account-Generation.html"> Deutsch</a>
+						<a class="dropdown-item  text-primary-base" href="../ru/Account-Generation.html"> Русский</a>
+						<a class="dropdown-item  text-primary-base" href="../it/Account-Generation.html"> Italiano</a>
+						<a class="dropdown-item  text-primary-base" href="../pd/Account-Generation.html"> Polski</a>
+					</div>
+
+		
                   </li>
               </ul>
               <span id="slide-line"></span>
