--- a/es/Account-Generation.html
+++ b/es/Account-Generation.html
@@ -133,12 +133,12 @@
                   <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
                     <a class="dropdown-toggle rounded  border border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Es</a>
                       <div class="dropdown-menu" aria-labelledby="language">
-                          <a class="dropdown-item  text-primary-base" href="../index.html"> English </a>
-                          <a class="dropdown-item  text-primary-base" href="../ger/index.html"> Deutsch</a>
-                          <a class="dropdown-item  text-primary-base" href="../fr/index.html"> Français</a>
-                          <a class="dropdown-item  text-primary-base" href="../ru/index.html"> Русский</a>
-                          <a class="dropdown-item  text-primary-base" href="../it/index.html"> Italiano</a>
-                          <a class="dropdown-item  text-primary-base" href="../pd/index.html"> Polski</a>
+                          <a class="dropdown-item  text-primary-base" href="../Account-Generation.html"> English </a>
+                          <a class="dropdown-item  text-primary-base" href="../ger/Account-Generation.html"> Deutsch</a>
+                          <a class="dropdown-item  text-primary-base" href="../fr/Account-Generation.html"> Français</a>
+                          <a class="dropdown-item  text-primary-base" href="../ru/Account-Generation.html"> Русский</a>
+                          <a class="dropdown-item  text-primary-base" href="../it/Account-Generation.html"> Italiano</a>
+                          <a class="dropdown-item  text-primary-base" href="../pd/Account-Generation.html"> Polski</a>
                       </div>
                   </li>
               </ul>
