--- a/fr/DVPN.html
+++ b/fr/DVPN.html
@@ -130,14 +130,14 @@
 
                   <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
                     <a class="dropdown-toggle rounded  border border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Fr</a>
-                      <div class="dropdown-menu" aria-labelledby="language">
-                          <a class="dropdown-item  text-primary-base" href="../index.html"> English </a>
-                          <a class="dropdown-item  text-primary-base" href="../es/index.html"> Español</a>
-                          <a class="dropdown-item  text-primary-base" href="../ger/index.html"> Deutsch</a>
-                          <a class="dropdown-item  text-primary-base" href="../ru/index.html"> Русский</a>
-                          <a class="dropdown-item  text-primary-base" href="../it/index.html"> Italiano</a>
-                          <a class="dropdown-item  text-primary-base" href="../pd/index.html"> Polski</a>
-                      </div>
+                    <div class="dropdown-menu" aria-labelledby="language">
+						<a class="dropdown-item  text-primary-base" href="../DVPN.html"> English </a>
+						<a class="dropdown-item  text-primary-base" href="../es/DVPN.html">  Español</a>
+						<a class="dropdown-item  text-primary-base" href="../ger/DVPN.html"> Deutsch</a>
+						<a class="dropdown-item  text-primary-base" href="../ru/DVPN.html"> Русский</a>
+						<a class="dropdown-item  text-primary-base" href="../it/DVPN.html"> Italiano</a>
+						<a class="dropdown-item  text-primary-base" href="../pd/DVPN.html"> Polski</a>
+					</div>
                   </li>
               </ul>
               <span id="slide-line"></span>
