--- a/fr/Web3-Browser.html
+++ b/fr/Web3-Browser.html
@@ -133,14 +133,14 @@
 
                   <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
                     <a class="dropdown-toggle rounded  border border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Fr</a>
-                      <div class="dropdown-menu" aria-labelledby="language">
-                          <a class="dropdown-item  text-primary-base" href="../index.html"> English </a>
-                          <a class="dropdown-item  text-primary-base" href="../es/index.html"> Español</a>
-                          <a class="dropdown-item  text-primary-base" href="../ger/index.html"> Deutsch</a>
-                          <a class="dropdown-item  text-primary-base" href="../ru/index.html"> Русский</a>
-                          <a class="dropdown-item  text-primary-base" href="../it/index.html"> Italiano</a>
-                          <a class="dropdown-item  text-primary-base" href="../pd/index.html"> Polski</a>
-                      </div>
+					<div class="dropdown-menu" aria-labelledby="language">
+						<a class="dropdown-item  text-primary-base" href="../Web3-Browser.html"> English </a>
+						<a class="dropdown-item  text-primary-base" href="../es/Web3-Browser.html">  Español</a>
+						<a class="dropdown-item  text-primary-base" href="../ger/Web3-Browser.html"> Deutsch</a>
+						<a class="dropdown-item  text-primary-base" href="../ru/Web3-Browser.html"> Русский</a>
+						<a class="dropdown-item  text-primary-base" href="../it/Web3-Browser.html"> Italiano</a>
+						<a class="dropdown-item  text-primary-base" href="../pd/Web3-Browser.html"> Polski</a>
+					</div>
                   </li>
               </ul>
               <span id="slide-line"></span>
