--- a/ger/keygard.html
+++ b/ger/keygard.html
@@ -133,14 +133,14 @@
 
                   <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
                     <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> De</a>
-                      <div class="dropdown-menu" aria-labelledby="language">
-                          <a class="dropdown-item  text-primary-base" href="../index.html"> English </a>
-                          <a class="dropdown-item  text-primary-base" href="../es/index.html"> Español</a>
-                          <a class="dropdown-item  text-primary-base" href="../fr/index.html">  Français</a>
-                          <a class="dropdown-item  text-primary-base" href="../ru/index.html"> Русский</a>
-                          <a class="dropdown-item  text-primary-base" href="../it/index.html"> Italiano</a>
-                          <a class="dropdown-item  text-primary-base" href="../pd/index.html"> Polski</a>
-                      </div>
+                    <div class="dropdown-menu" aria-labelledby="language">
+						<a class="dropdown-item  text-primary-base" href="../keygard.html"> English </a>
+						<a class="dropdown-item  text-primary-base" href="../es/keygard.html">  Español</a>
+						<a class="dropdown-item  text-primary-base" href="../fr/keygard.html"> Français</a>
+						<a class="dropdown-item  text-primary-base" href="../ru/keygard.html"> Русский</a>
+						<a class="dropdown-item  text-primary-base" href="../it/keygard.html"> Italiano</a>
+						<a class="dropdown-item  text-primary-base" href="../pd/keygard.html"> Polski</a>
+					</div>
                   </li>
               </ul>
               <span id="slide-line"></span>
