--- a/it/Account-Generation.html
+++ b/it/Account-Generation.html
@@ -132,15 +132,17 @@
                   </li>
                   <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
                     <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> It</a>
-                      <div class="dropdown-menu" aria-labelledby="language">
-                          <a class="dropdown-item text-primary-base" href="../index.html"> English </a>
-                          <a class="dropdown-item text-primary-base" href="../es/index.html"> Español</a>
-                          <a class="dropdown-item text-primary-base" href="../ger/index.html"> Deutsch</a>
-                          <a class="dropdown-item text-primary-base" href="../fr/index.html">  Français</a>
-                          <a class="dropdown-item text-primary-base" href="../ru/index.html"> Русский</a>
-                          <a class="dropdown-item text-primary-base" href="../pd/index.html"> Polski</a>
-                      </div>
+					<div class="dropdown-menu" aria-labelledby="language">
+						<a class="dropdown-item  text-primary-base" href="../Account-Generation.html"> English </a>
+						<a class="dropdown-item  text-primary-base" href="../es/Account-Generation.html">  Español</a>
+						<a class="dropdown-item  text-primary-base" href="../ger/Account-Generation.html"> Deutsch</a>
+						<a class="dropdown-item  text-primary-base" href="../fr/Account-Generation.html"> Français</a>
+						<a class="dropdown-item  text-primary-base" href="../ru/Account-Generation.html"> Русский</a>
+						<a class="dropdown-item  text-primary-base" href="../pd/Account-Generation.html"> Polski</a>
+					</div>
                   </li>
+
+				  
 
                  
               </ul>
