--- a/it/Web3-Browser.html
+++ b/it/Web3-Browser.html
@@ -131,14 +131,14 @@
                   </li>
                   <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
                     <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> It</a>
-                      <div class="dropdown-menu" aria-labelledby="language">
-                          <a class="dropdown-item text-primary-base" href="../index.html"> English </a>
-                          <a class="dropdown-item text-primary-base" href="../es/index.html"> Español</a>
-                          <a class="dropdown-item text-primary-base" href="../ger/index.html"> Deutsch</a>
-                          <a class="dropdown-item text-primary-base" href="../fr/index.html">  Français</a>
-                          <a class="dropdown-item text-primary-base" href="../ru/index.html"> Русский</a>
-                          <a class="dropdown-item text-primary-base" href="../pd/index.html"> Polski</a>
-                      </div>
+					<div class="dropdown-menu" aria-labelledby="language">
+						<a class="dropdown-item  text-primary-base" href="../Web3-Browser.html"> English </a>
+						<a class="dropdown-item  text-primary-base" href="../es/Web3-Browser.html">  Español</a>
+						<a class="dropdown-item  text-primary-base" href="../ger/Web3-Browser.html"> Deutsch</a>
+						<a class="dropdown-item  text-primary-base" href="../fr/Web3-Browser.html"> Français</a>
+						<a class="dropdown-item  text-primary-base" href="../ru/Web3-Browser.html"> Русский</a>
+						<a class="dropdown-item  text-primary-base" href="../pd/Web3-Browser.html"> Polski</a>
+					</div>
                   </li>
 
                  
