--- a/pd/faq.html
+++ b/pd/faq.html
@@ -82,14 +82,14 @@
                   </li>
                   <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
                     <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Pl</a>
-                      <div class="dropdown-menu" aria-labelledby="language">
-                          <a class="dropdown-item text-primary-base" href="../Account-Generation.html"> English </a>
-                          <a class="dropdown-item text-primary-base" href="../es/Account-Generation.html"> Español</a>
-                          <a class="dropdown-item text-primary-base" href="../ger/Account-Generation.html"> Deutsch</a>
-                          <a class="dropdown-item text-primary-base" href="../fr/Account-Generation.html">  Français</a>
-                          <a class="dropdown-item text-primary-base" href="../ru/Account-Generation.html"> Русский</a>
-                          <a class="dropdown-item text-primary-base" href="../it/Account-Generation.html"> Italiano</a>
-                      </div>
+                    <div class="dropdown-menu" aria-labelledby="language">
+						<a class="dropdown-item  text-primary-base" href="../faq.html"> English </a>
+						<a class="dropdown-item  text-primary-base" href="../es/faq.html">  Español</a>
+						<a class="dropdown-item  text-primary-base" href="../ger/faq.html"> Deutsch</a>
+						<a class="dropdown-item  text-primary-base" href="../fr/faq.html"> Français</a>
+						<a class="dropdown-item  text-primary-base" href="../ru/faq.html"> Русский</a>
+						<a class="dropdown-item  text-primary-base" href="../it/faq.html"> Italiano</a>
+					</div>
                   </li>
               </ul>
               <span id="slide-line"></span>
