--- a/ru/Account-Generation.html
+++ b/ru/Account-Generation.html
@@ -141,15 +141,16 @@
 
                   <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
                     <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Ru</a>
-                      <div class="dropdown-menu" aria-labelledby="language">
-                          <a class="dropdown-item text-primary-base" href="../index.html"> English </a>
-                          <a class="dropdown-item text-primary-base" href="../es/index.html"> Español</a>
-                          <a class="dropdown-item text-primary-base" href="../ger/index.html"> Deutsch</a>
-                          <a class="dropdown-item text-primary-base" href="../fr/index.html">  Français</a>
-                          <a class="dropdown-item text-primary-base" href="../it/index.html"> Italiano</a>
-                          <a class="dropdown-item text-primary-base" href="../pd/index.html"> Polski</a>
-                      </div>
+					<div class="dropdown-menu" aria-labelledby="language">
+						<a class="dropdown-item  text-primary-base" href="../Account-Generation.html"> English </a>
+						<a class="dropdown-item  text-primary-base" href="../es/Account-Generation.html">  Español</a>
+						<a class="dropdown-item  text-primary-base" href="../ger/Account-Generation.html"> Deutsch</a>
+						<a class="dropdown-item  text-primary-base" href="../fr/Account-Generation.html"> Français</a>
+						<a class="dropdown-item  text-primary-base" href="../it/Account-Generation.html"> Italiano</a>
+						<a class="dropdown-item  text-primary-base" href="../pd/Account-Generation.html"> Polski</a>
+					</div>
                   </li>
+				  
               </ul>
               <span id="slide-line"></span>
               <form class="form-inline mt-2 mt-md-0">
