--- a/security.html
+++ b/security.html
@@ -130,7 +130,7 @@
 					  </div>
 				  </li>
 				  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
-                    <a class="dropdown-toggle   border border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> EN</a>
+                     <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> EN</a>
                       <div class="dropdown-menu" aria-labelledby="language">
                           <a class="dropdown-item" href="./es/security.html"> Español </a>
                           <a class="dropdown-item" href="./ger/security.html"> Deutsch</a>
