--- a/ger/Secure-Crypto-Wallet.html
+++ b/ger/Secure-Crypto-Wallet.html
@@ -87,17 +87,17 @@
 	<header class="page-header">
         <!-- Horizontal Menu Start-->
         <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-      <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="#head-area"><img style="width: 150px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
+      <a class="navbar-brand " href="#head-area"><img style="width: 150px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <div id="navigation" class="navbar-nav ml-auto">
               <ul class="navbar-nav mt-1">
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#about">Über</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Eigenschaften</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="Private-Messenger.html">Privater Messenger</a>
@@ -108,17 +108,17 @@
                           <a class="dropdown-item" href="DVPN.html">DVPN</a>
                       </div>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                  <li class="nav-item ">
                     <a class="nav-link" href="security.html">Sicherheit</a>
                 </li>
                  
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#token-sale-mobile-app">Token Verkauf</a>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.5s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#roadmap">Straßenkarte</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mehr</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="index.html#mobile-app">App</a>
@@ -130,7 +130,7 @@
                   </li>
               
 
-                  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                  <li style="border: 2;" class="dropdown show mr-4 ">
                     <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> De</a>
 					<div class="dropdown-menu" aria-labelledby="language">
 						<a class="dropdown-item  text-primary-base" href="../Secure-Crypto-Wallet.html"> English </a>
@@ -144,7 +144,7 @@
               </ul>
               <span id="slide-line"></span>
               <form class="form-inline mt-2 mt-md-0">
-                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 animated" data-animation="fadeInDown" data-animation-delay="1.8s" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Eintragen</a>
+                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 " href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Eintragen</a>
               </form>
           </div>
       </div>
@@ -163,16 +163,16 @@
 			<div class="grid md:grid-cols-2">
 				<div class="relative px-8 self-center xl:mb-32">
 					<span class="w-screen absolute -z-1 right-0 h-full"></span>
-					<h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">Eine Krypto-Super-Geldbörse</h1>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal animated" data-animation="fadeInUpShorter" data-animation-delay="1.5s">
+					<h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl ">Eine Krypto-Super-Geldbörse</h1>
+					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal ">
 						Mit der sicheren, nicht verwahrten PCNP-Geldbörse haben Sie die volle Kontrolle über Ihr Geld. <br> 
 						<br> Demnächst auf
 					</p>
 					<div class="flex items-center -ml-12 mt-12">
-						<a src="https://apps.apple.com/us/app/PCNP-private-communication/id1178893006" target="_blank" rel="noopener" id="official:ios" class="ml-12 app-download animated" data-animation="fadeInUpShorter" data-animation-delay="1.5s"><img src="../theme-assets/images/app-store.svg"></a>
-						<a src="https://play.google.com/store/apps/details?id=im.PCNP.ethereum" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download animated" data-animation="fadeInUpShorter" data-animation-delay="1.5s"><img src="../theme-assets/images/google-play.svg"></a>
-						<a src="https://PCNP-im-files.ams3.cdn.digitaloceanspaces.com/PCNPIm-Mobile-v1.14.0-d1a3a2.apk" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download animated" data-animation="fadeInUpShorter" data-animation-delay="1.5s"><img src="../theme-assets/images/apk.svg"></a>
-						<a src="https://f-droid.org/packages/im.PCNP.ethereum/" target="_blank" rel="noopener" id="official:fdroid" class="ml-8 xs:ml-4 app-download animated" data-animation="fadeInUpShorter" data-animation-delay="1.5s"><img src="../theme-assets/images/fdroid.svg"></a>
+						<a src="https://apps.apple.com/us/app/PCNP-private-communication/id1178893006" target="_blank" rel="noopener" id="official:ios" class="ml-12 app-download "><img src="../theme-assets/images/app-store.svg"></a>
+						<a src="https://play.google.com/store/apps/details?id=im.PCNP.ethereum" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download "><img src="../theme-assets/images/google-play.svg"></a>
+						<a src="https://PCNP-im-files.ams3.cdn.digitaloceanspaces.com/PCNPIm-Mobile-v1.14.0-d1a3a2.apk" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download "><img src="../theme-assets/images/apk.svg"></a>
+						<a src="https://f-droid.org/packages/im.PCNP.ethereum/" target="_blank" rel="noopener" id="official:fdroid" class="ml-8 xs:ml-4 app-download "><img src="../theme-assets/images/fdroid.svg"></a>
 					</div>
 				</div>
 				<div class="relative mt-24 md:mt-0">
@@ -181,7 +181,7 @@
 							<source src="../video/wallet-intro.webm" type="video/webm">
 							<source src="../video/wallet-intro.mp4" type="video/mp4">
 						</video>
-						<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.6s" src="../theme-assets/images/wallet-intro-2x.png"  class="md:hidden">
+						<img class="" src="../theme-assets/images/wallet-intro-2x.png"  class="md:hidden">
 					</div>
 				</div>
 			</div>
