--- a/es/Private-messenger.html
+++ b/es/Private-messenger.html
@@ -82,17 +82,17 @@
     <header class="page-header">
         <!-- Horizontal Menu Start-->
         <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-      <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="#head-area"><img style="width: 150px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
+      <a class="navbar-brand" href="#head-area"><img style="width: 150px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <div id="navigation" class="navbar-nav ml-auto">
               <ul class="navbar-nav mt-1">
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
+                  <li class="nav-item">
                       <a class="nav-link" href="index.html#about">Sobre</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Características</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="Private-Messenger.html">Mensajero privado</a>
@@ -103,19 +103,19 @@
                           <a class="dropdown-item" href="DVPN.html">DVPN</a>
                       </div>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                  <li class="nav-item ">
                     <a class="nav-link" href="security.html">Seguridad</a>
                 </li>
                   <!-- <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
                       <a class="nav-link" href="index.html#token-distribution">Distribución de tokens</a>
                   </li> -->
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#token-sale-mobile-app">venta de tokens</a>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.5s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#roadmap">Mapa de ruta</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Más</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="index.html#mobile-app">App</a>
@@ -125,7 +125,7 @@
                           <a class="dropdown-item" href="jobs.html">Trabajos</a>
                       </div>
                   </li>
-                  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                  <li style="border: 2;" class="dropdown show mr-4 ">
                     <a class="dropdown-toggle rounded  border border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Es</a>
                     <div class="dropdown-menu" aria-labelledby="language">
                         <a class="dropdown-item  text-primary-base" href="../Private-messenger.html"> English </a>
@@ -139,7 +139,7 @@
               </ul>
               <span id="slide-line"></span>
               <form class="form-inline mt-2 mt-md-0">
-                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 animated" data-animation="fadeInDown" data-animation-delay="1.8s" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Acceder</a>
+                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 " href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Acceder</a>
               </form>
           </div>
       </div>
@@ -160,7 +160,7 @@
                
                 <section class="pt-16 xl:pt-0">
                     <div class="max-w-screen-2xl mx-auto lg:px-12">
-                        <div class="grid md:grid-cols-2 animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s">
+                        <div class="grid md:grid-cols-2 ">
                             <div style="margin-bottom: 1rem;" class="relative px-8 self-center xl:mb-32">
                                 <h1 style="font-size: 4.8rem; line-height: 4.75rem;" class="leading-tight font-display text-6xl font-medium xl:text-7xl 2xl:text-8xl">Mensajería orientada  <br> a la privacidad  </h1>
                                 <p style="font-family: Comfortaa,Roboto,'Helvetica Neue',Arial,sans-serif; color: #fff;" class="text-gray-600 mt-10 mb-16 text-xl 2xl:text-4xl font-display font-normal leading-normal">
