--- a/es/Web3-Browser.html
+++ b/es/Web3-Browser.html
@@ -84,52 +84,52 @@
 
     <!-- Header Start-->
 	<header class="page-header">
-		<!-- Horizontal Menu Start-->
-		<nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-	  <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="index.html"><img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 160px; height: 70px;" src="../theme-assets/images/pcnp1112 - Copy.png" alt="Pcnprotocol Logo"/></a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-		  <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarCollapse">
-		  <div style="font-size: inherit;" id="navigation" class="navbar-nav ml-auto">
-			  <ul style="font-size: 15.008px;" class="navbar-nav mt-1">
-				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
-					  <a style="font-size: 12.8px;" class="nav-link" href="index.html#about">About</a>
-				  </li>
-				  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
-					  <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Features</a>
-					  <div class="dropdown-menu" aria-labelledby="more">
-						  <a class="dropdown-item" href="Private-Messenger.html">Private Messenger</a>
-						  <a class="dropdown-item" href="Account-Generation.html">Account Generation</a>
-						  <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Secure Crypto Wallet</a>
-						  <a class="dropdown-item" href="keygard.html">KeyPass</a>
-						  <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
-						  <a class="dropdown-item" href="DVPN.html">DVPN</a>
-					  </div>
-				  </li>
-				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
-                    <a class="nav-link" href="security.html">Security</a>
+        <!-- Horizontal Menu Start-->
+        <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
+      <a class="navbar-brand" href="#head-area"><img style="width: 150px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+          <div id="navigation" class="navbar-nav ml-auto">
+              <ul class="navbar-nav mt-1">
+                  <li class="nav-item">
+                      <a class="nav-link" href="index.html#about">Sobre</a>
+                  </li>
+                  <li class="dropdown show mr-2 px-2 ">
+                      <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Características</a>
+                      <div class="dropdown-menu" aria-labelledby="more">
+                          <a class="dropdown-item" href="Private-Messenger.html">Mensajero privado</a>
+                          <a class="dropdown-item" href="Account-Generation.html">Generación de cuentas</a>
+                          <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Cartera criptográfica segura</a>
+                          <a class="dropdown-item" href="keygard.html">KeyPass</a>
+                          <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
+                          <a class="dropdown-item" href="DVPN.html">DVPN</a>
+                      </div>
+                  </li>
+                  <li class="nav-item ">
+                    <a class="nav-link" href="security.html">Seguridad</a>
                 </li>
-				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
-					  <a class="nav-link" href="index.html#whitepaper">Whitepaper</a>
-				  </li>
-				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
-					  <a class="nav-link" href="index.html#token-sale-mobile-app">Token Sale</a>
-				  </li>
-				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.5s">
-					  <a class="nav-link" href="index.html#roadmap">Roadmap</a>
-				  </li>
-				  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
-					  <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
-					  <div class="dropdown-menu" aria-labelledby="more">
-						  <a class="dropdown-item" href="index.html#mobile-app">App</a>
-						  <a class="dropdown-item" href="index.html#team">Team</a>
-						  <a class="dropdown-item" href="index.html#faq">FAQ</a>
-						  <a class="dropdown-item" href="index.html#contact">Contact</a>
-						  <a class="dropdown-item" href="jobs.html">Jobs</a>
-					  </div>
-				  </li>
-				  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                  <!-- <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                      <a class="nav-link" href="index.html#token-distribution">Distribución de tokens</a>
+                  </li> -->
+                  <li class="nav-item ">
+                      <a class="nav-link" href="index.html#token-sale-mobile-app">venta de tokens</a>
+                  </li>
+                  <li class="nav-item ">
+                      <a class="nav-link" href="index.html#roadmap">Mapa de ruta</a>
+                  </li>
+                  <li class="dropdown show mr-2 px-2 ">
+                      <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Más</a>
+                      <div class="dropdown-menu" aria-labelledby="more">
+                          <a class="dropdown-item" href="index.html#mobile-app">App</a>
+                          <a class="dropdown-item" href="index.html#team">Equipo</a>
+                          <a class="dropdown-item" href="faq.html">FAQ</a>
+                          <a class="dropdown-item" href="index.html#contact">Contacte con</a>
+                          <a class="dropdown-item" href="jobs.html">Trabajos</a>
+                      </div>
+                  </li>
+				  <li style="border: 2;" class="dropdown show mr-4 ">
                     <a class="dropdown-toggle   border border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Es</a>
 					<div class="dropdown-menu" aria-labelledby="language">
 						<a class="dropdown-item  text-primary-base" href="../Web3-Browser.html"> English </a>
@@ -143,7 +143,7 @@
 			  </ul>
 			  <span id="slide-line"></span>
 			  <form class="form-inline mt-2 mt-md-0">
-				  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 animated" data-animation="fadeInDown" data-animation-delay="1.8s" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Sign in</a>
+				  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 " href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Sign in</a>
 			  </form>
 		  </div>
 	  </div>
@@ -162,11 +162,11 @@
 			<div class="grid md:grid-cols-2">
 				<div class="relative px-8 self-center xl:mb-32">
 					<span class="w-screen absolute -z-1 right-0 h-full"></span>
-					<h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl animated" data-animation="fadeInUpShorter" data-animation-delay="1s">Navegador Web3 privado y seguro con servicio VPN gratuito</h1>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">
+					<h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl ">Navegador Web3 privado y seguro con servicio VPN gratuito</h1>
+					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal ">
 						Accede a las últimas defi dapps, exchanges, marketplaces, juegos y mucho más con el navegador Web3 <br>   <br> Pronto en
 					</p>
-					<div class="flex items-center -ml-12 mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">
+					<div class="flex items-center -ml-12 mt-12 ">
 						<a src="https://apps.apple.com/us/app/PCNP-private-communication/id1178893006" target="_blank" rel="noopener" id="official:ios" class="ml-12 app-download"><img src="../theme-assets/images/app-store.svg"></a>
 						<a src="https://play.google.com/store/apps/details?id=im.PCNP.ethereum" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img src="../theme-assets/images/google-play.svg"></a>
 						<a src="https://PCNP-im-files.ams3.cdn.digitaloceanspaces.com/PCNPIm-Mobile-v1.14.0-d1a3a2.apk" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img src="../theme-assets/images/apk.svg"></a>
@@ -175,7 +175,7 @@
 				</div>
 				<div class="relative mt-24 md:mt-0">
 					<div class="md:-mt-24 mx-auto flex justify-center items-center md:block md:pt-20">
-						<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s"  src="../theme-assets/images/pcn0- Copy.png">
+						<img class=""  src="../theme-assets/images/pcn0- Copy.png">
 					</div>
 				</div>
 			</div>
