--- a/es/faq.html
+++ b/es/faq.html
@@ -53,17 +53,17 @@
     <header class="page-header">
         <!-- Horizontal Menu Start-->
         <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-      <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="#head-area"><img style="width: 150px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
+      <a class="navbar-brand" href="#head-area"><img style="width: 150px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <div id="navigation" class="navbar-nav ml-auto">
               <ul class="navbar-nav mt-1">
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
+                  <li class="nav-item">
                       <a class="nav-link" href="index.html#about">Sobre</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Características</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="Private-Messenger.html">Mensajero privado</a>
@@ -74,19 +74,19 @@
                           <a class="dropdown-item" href="DVPN.html">DVPN</a>
                       </div>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                  <li class="nav-item ">
                     <a class="nav-link" href="security.html">Seguridad</a>
                 </li>
                   <!-- <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
                       <a class="nav-link" href="index.html#token-distribution">Distribución de tokens</a>
                   </li> -->
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#token-sale-mobile-app">venta de tokens</a>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.5s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#roadmap">Mapa de ruta</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Más</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="index.html#mobile-app">App</a>
@@ -96,7 +96,7 @@
                           <a class="dropdown-item" href="jobs.html">Trabajos</a>
                       </div>
                   </li>
-                  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                  <li style="border: 2;" class="dropdown show mr-4 ">
                     <a class="dropdown-toggle rounded  border border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> Es</a>
                     <div class="dropdown-menu" aria-labelledby="language">
                         <a class="dropdown-item  text-primary-base" href="../faq.html"> English </a>
@@ -110,7 +110,7 @@
               </ul>
               <span id="slide-line"></span>
               <form class="form-inline mt-2 mt-md-0">
-                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 animated" data-animation="fadeInDown" data-animation-delay="1.8s" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Acceder</a>
+                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Acceder</a>
               </form>
           </div>
       </div>
@@ -123,33 +123,33 @@
             <section id="contact" class="contact section-padding">
                 <div class="container">
                     <div class="heading text-center">
-                        <div class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
+                        <div class="">
                             <h6 class="sub-title">ÚNASE A NOSOTROS</h6>
                             <h2 class="title">Contacte con</h2>
                         </div>
-                        <p class="content-desc animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">¿Tiene preguntas? Estaremos encantados de ayudarle.</p>
+                        <p class="content-desc ">¿Tiene preguntas? Estaremos encantados de ayudarle.</p>
                     </div>
                     <div class="row">
                         <div class="col-xl-8 col-md-12 mx-auto">
                             <ul class="list-unstyled contact-info pb-5 mb-5">
-                                <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">
+                                <li class="">
                                     <i class="ti-headphone"></i>
                                     <span class="ml-1">+44 0123 4567</span>
                                 </li>
-                                <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
+                                <li class="">
                                     <i class="ti-email"></i>
                                     <span class="ml-1">infopcnp@gmail.com</span>
                                 </li>
-                                <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s">
+                                <li class="">
                                     <i class="ti-comment-alt"></i>
                                     <span class="ml-1">Únase a nosotros en Telegram</span>
                                 </li>
                             </ul>
                             <form action="#" method="post" accept-charset="utf-8" class="text-center">
-                                <input type="text" class="form-control animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s" name="name" placeholder="Su nombre">
-                                <input type="text" class="form-control animated" data-animation="fadeInUpShorter" data-animation-delay="0.9s" name="mail" placeholder="Su correo">
-                                <input type="text" class="form-control animated" data-animation="fadeInUpShorter" data-animation-delay="1.0s" name="message" placeholder="Su masaje">
-                                <button type="submit" class="btn btn-lg btn-gradient-purple btn-glow animated" data-animation="fadeInUpShorter" data-animation-delay="1.1s">Enviar mensaje</button>
+                                <input type="text" class="form-control " name="name" placeholder="Su nombre">
+                                <input type="text" class="form-control " name="mail" placeholder="Su correo">
+                                <input type="text" class="form-control " name="message" placeholder="Su masaje">
+                                <button type="submit" class="btn btn-lg btn-gradient-purple btn-glow ">Enviar mensaje</button>
                             </form>
                         </div>
                     </div>
