--- a/ger/Account-Generation.html
+++ b/ger/Account-Generation.html
@@ -87,17 +87,17 @@
     <header class="page-header">
         <!-- Horizontal Menu Start-->
         <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-      <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="#head-area"><img style="width: 150px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
+      <a class="navbar-brand " href="#head-area"><img style="width: 150px; height: 60px;" src="../theme-assets/images/Logo 2 Transparent.png" alt="Pcnprotocol Logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <div id="navigation" class="navbar-nav ml-auto">
               <ul class="navbar-nav mt-1">
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#about">Über</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Eigenschaften</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="Private-Messenger.html">Privater Messenger</a>
@@ -108,17 +108,17 @@
                           <a class="dropdown-item" href="DVPN.html">DVPN</a>
                       </div>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                  <li class="nav-item ">
                     <a class="nav-link" href="security.html">Sicherheit</a>
                 </li>
                  
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#token-sale-mobile-app">Token Verkauf</a>
                   </li>
-                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.5s">
+                  <li class="nav-item ">
                       <a class="nav-link" href="index.html#roadmap">Straßenkarte</a>
                   </li>
-                  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
+                  <li class="dropdown show mr-2 px-2 ">
                       <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mehr</a>
                       <div class="dropdown-menu" aria-labelledby="more">
                           <a class="dropdown-item" href="index.html#mobile-app">App</a>
@@ -130,7 +130,7 @@
                   </li>
               
 
-                  <li style="border: 2;" class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
+                  <li style="border: 2;" class="dropdown show mr-4 ">
                     <a class="dropdown-toggle   border rounded border-radius" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding: 1rem !important;"> De</a>
 					<div class="dropdown-menu" aria-labelledby="language">
 						<a class="dropdown-item  text-primary-base" href="../Account-Generation.html"> English </a>
@@ -146,7 +146,7 @@
               </ul>
               <span id="slide-line"></span>
               <form class="form-inline mt-2 mt-md-0">
-                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 animated" data-animation="fadeInDown" data-animation-delay="1.8s" href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Eintragen</a>
+                  <a class="btn btn-sm btn-gradient-purple btn-glow my-2 my-sm-0 " href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html" target="_blank">Eintragen</a>
               </form>
           </div>
       </div>
@@ -167,23 +167,23 @@
 			<div id="particles-js"></div>
 			<div class="grid md:grid-cols-2">
 				<div class="relative px-8 self-center xl:mb-32">
-					<h1 style="color: #fff;" class="leading-tight font-display text-6xl  xl:text-7xl 2xl:text-8xl animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="1.5s"> Anonyme Kontoerstellung</h1>
+					<h1 style="color: #fff;" class="leading-tight font-display text-6xl  xl:text-7xl 2xl:text-8xl "> Anonyme Kontoerstellung</h1>
 					<ul class="mt-16 mb-20">
-						<li style="color: #fff;" class="flex items-center mb-4 text-gray-600 text-xl 2xl:text-4xl font-display font-normal leading-normal"><img src="../theme-assets/images/no-phone.svg" class="mr-8 md:w-auto w-16 animated" data-animation="fadeInUpShorter" data-animation-delay="1.6s"><span class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.6s"> Keine Telefonnummer</span></li>
-						<li style="color: #fff;" class="flex items-center mb-4 text-gray-600 text-xl 2xl:text-4xl font-display font-normal leading-normal"><img src="../theme-assets/images/no-email.svg" class="mr-8 md:w-auto w-16  animated" data-animation="fadeInUpShorter" data-animation-delay="1.6s"><span class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.6s">Keine E-Mail Adresse </span></li>
-						<li style="color: #fff;" class="flex items-center mb-4 text-gray-600 text-xl 2xl:text-4xl font-display font-normal leading-normal"><img src="../theme-assets/images/no-bank.svg" class="mr-8 md:w-auto w-16  animated" data-animation="fadeInUpShorter" data-animation-delay="1.6s"> <span class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.6s">Kein Bankkonto</span></li>
+						<li style="color: #fff;" class="flex items-center mb-4 text-gray-600 text-xl 2xl:text-4xl font-display font-normal leading-normal"><img src="../theme-assets/images/no-phone.svg" class="mr-8 md:w-auto w-16 "><span class=""> Keine Telefonnummer</span></li>
+						<li style="color: #fff;" class="flex items-center mb-4 text-gray-600 text-xl 2xl:text-4xl font-display font-normal leading-normal"><img src="../theme-assets/images/no-email.svg" class="mr-8 md:w-auto w-16  "><span class="">Keine E-Mail Adresse </span></li>
+						<li style="color: #fff;" class="flex items-center mb-4 text-gray-600 text-xl 2xl:text-4xl font-display font-normal leading-normal"><img src="../theme-assets/images/no-bank.svg" class="mr-8 md:w-auto w-16 "> <span class="">Kein Bankkonto</span></li>
 					</ul>
-					<br> <span class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.6s" style="color: #fff;" >Demnächst auf  </span> 
+					<br> <span class="" style="color: #fff;" >Demnächst auf  </span> 
 					<div class="flex items-center mt-12 xs:-mr-2 xs:-ml-2">
-						<a class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s" src="https://apps.apple.com/us/app/status-private-communication/id1178893006" target="_blank" rel="noopener" id="official:ios" class="app-download"><img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s" src="../theme-assets/images/app-store.svg"></a>
-						<a class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s" src="https://play.google.com/store/apps/details?id=im.status.ethereum" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s" src="../theme-assets/images/google-play.svg"></a>
-						<a class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s" src="https://status-im-files.ams3.cdn.digitaloceanspaces.com/StatusIm-Mobile-v1.14.0-d1a3a2.apk" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s" src="../theme-assets/images/apk.svg"></a>
-						<a class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s" src="https://f-droid.org/packages/im.status.ethereum/" target="_blank" rel="noopener" id="official:fdroid" class="ml-8 xs:ml-4 app-download"><img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s" src="../theme-assets/images/fdroid.svg"></a>
+						<a class="" src="https://apps.apple.com/us/app/status-private-communication/id1178893006" target="_blank" rel="noopener" id="official:ios" class="app-download"><img class="" src="../theme-assets/images/app-store.svg"></a>
+						<a class="" src="https://play.google.com/store/apps/details?id=im.status.ethereum" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img class="" src="../theme-assets/images/google-play.svg"></a>
+						<a class="" src="https://status-im-files.ams3.cdn.digitaloceanspaces.com/StatusIm-Mobile-v1.14.0-d1a3a2.apk" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img class="" src="../theme-assets/images/apk.svg"></a>
+						<a class="" src="https://f-droid.org/packages/im.status.ethereum/" target="_blank" rel="noopener" id="official:fdroid" class="ml-8 xs:ml-4 app-download"><img class="" src="../theme-assets/images/fdroid.svg"></a>
 					</div>
 				</div>
 				<div class="relative mt-24 px-8 md:mt-0">
 					<div class="md:-mt-24 mx-auto -ml-12 -mr-12 md:ml-0 md:mr-0 flex justify-end items-center md:pt-20">
-						<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.6s" src="../theme-assets/images/accountpcnp.png">
+						<img class="" src="../theme-assets/images/accountpcnp.png">
 					</div>
 				</div>
 			</div>
